Changed 404 page and social icons

--- a/404.html
+++ b/404.html
@@ -2,6 +2,6 @@
 layout: error
 title: 404
 ---
-## Excuse me, sir. Have you lost your way?
+## Houston, we have a problem!
 
-##### Maybe you should go back <a href="https://a-pucci.github.io" target="_blank">home</a>
+### Take me <a href="https://a-pucci.github.io">home</a>!
