--- a/projects.html
+++ b/projects.html
@@ -4,18 +4,18 @@ title: Projects
 ---
 # Projects
 
----
+<!-- --- -->
 
-### The Greatest Show
+<!-- ### The Greatest Show -->
 
-<img src="./resources/screens/the_greatest_show.png" width="500"> 
+<!-- <img src="./resources/screens/the_greatest_show.png" width="500">  -->
 
-2D puzzle game where you are a puppet able of switching between two worlds.
-You have to find all machine's gears spread in these two worlds.
+<!-- 2D puzzle game where you are a puppet able of switching between two worlds. -->
+<!-- You have to find all machine's gears spread in these two worlds. -->
 
-[GitHub](https://github.com/a-pucci/The_Greatest_Show)
+<!-- [GitHub](https://github.com/a-pucci/The_Greatest_Show) -->
 
-Build: <a href="./resources/builds/the_greatest_show_build.rar" download>windows</a>
+<!-- Build: <a href="./resources/builds/the_greatest_show_build.rar" download>windows</a> -->
 
 ---
 
