--- a/projects.html
+++ b/projects.html
@@ -4,40 +4,32 @@ title: Projects
 ---
 # Projects
 
-<!-- --- -->
+### The Greatest Show -->
 
-<!-- ### The Greatest Show -->
+<img src="/img/screens/the_greatest_show.png" width="500">
 
-<!-- <img src="./resources/screens/the_greatest_show.png" width="500">  -->
+2D puzzle game where you are a puppet able of switching between two worlds.
+You have to find all machine's gears spread in these two worlds.
 
-<!-- 2D puzzle game where you are a puppet able of switching between two worlds. -->
-<!-- You have to find all machine's gears spread in these two worlds. -->
-
-<!-- [GitHub](https://github.com/a-pucci/The_Greatest_Show) -->
-
-<!-- Build: <a href="./resources/builds/the_greatest_show_build.rar" download>windows</a> -->
+[GitHub](https://github.com/a-pucci/The_Greatest_Show)
 
 ---
 
 ### Nuke Alarm
 
-<img src="./resources/screens/nuke_alarm.png" width="700">
+<img src="/img/screens/nuke_alarm.png" width="500">
 
 Puzzle game where you are president's secretary.
 You have to find out if recieved threats are real or fake trying to avoid a nuclear war.
 
 [GitLab](https://gitlab.com/a-pucci/NukeAlarm)
 
-Build: <a href="./resources/builds/nuke_alarm_build.rar" download>windows</a>
-
 ---
 
 ### Trip Tennis Tournament
 
-<img src="./resources/screens/trip_tennis_tournament.png" width="700">
+<img src="/img/screens/trip_tennis_tournament.png" width="500">
 
 Competitive local multiplayer game based on tennis in a vaporwawe atmosphere.
 
-[GitLab](https://gitlab.com/Calosi/triptennistournament)
-
-Build: <a href="./resources/builds/trip_tennis_tournament_build.rar" download>windows</a>
+<font color="red">- In Development -</font>
