--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@ title: Projects
 ---
 # Projects
 
-### The Greatest Show -->
+### The Greatest Show
 
 <img src="/img/screens/the_greatest_show.png" width="500">
 
