--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ title: About
 
 I am a Unity 3D game developer born in Poggibonsi (Siena), Italy in 1990.
 
-I grow up with a SNES controller in my hands playing Donkey Kong and getting fascinated about videogames. 
+I grew up with a SNES controller in my hands playing Donkey Kong and getting fascinated about videogames. 
 
 After some years attending computer science courses at Siena University, i coosed to pursue my passion for games and start searching something that could fit me better. 
 
