Changed Page Layout

--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@ layout: null
 section-type: about
 title: About
 ---
-# About
+# ABOUT
 
 I am a Unity 3D game developer born in Poggibonsi (Siena), Italy in 1990.
 
