--- a/projects.html
+++ b/projects.html
@@ -2,34 +2,39 @@
 section-type: projects
 title: Projects
 ---
-# Projects
-
-### The Greatest Show
-
-<img src="/img/screens/the_greatest_show.png" width="500">
+<!-- TGS -->
+<div class="game-section">
+<h2 align="center">The Greatest Show</h2>
+<p align="justify">
+<img src="/img/screens/the_greatest_show.png" width="500" align="left" hspace="30">
 
 2D puzzle game where you are a puppet able of switching between two worlds.
-You have to find all machine's gears spread in these two worlds.
+You have to find all machine's gears spread in these two worlds.</p>
 
-[GitHub](https://github.com/a-pucci/The_Greatest_Show)
-
----
-
-### Nuke Alarm
-
-<img src="/img/screens/nuke_alarm.png" width="500">
+<a href="https://github.com/a-pucci/The_Greatest_Show"><h4 align= "center">GITHUB</h4></a>
+</div>
+<hr>
+<!-- NA -->
+<div class="game-section">
+<h2 align="center">Nuke Alarm</h2>
+<p align="justify">
+<img src="/img/screens/nuke_alarm.png" width="500" align="right" hspace="30">
 
 Puzzle game where you are president's secretary.
-You have to find out if recieved threats are real or fake trying to avoid a nuclear war.
+You have to find out if recieved threats are real or fake trying to avoid a nuclear war.</p>
 
-[GitLab](https://gitlab.com/a-pucci/NukeAlarm)
+<a href="https://gitlab.com/a-pucci/NukeAlarm"><h4 align="center">GITLAB</h4></a>
+</div>
+<hr>
+<!-- TTT -->
 
----
+<div class="game-section">
+<h2 align="center">Trip Tennis Tournament</h2>
+<p align="justify">
+<img src="/img/screens/trip_tennis_tournament.png" width="500" align="left" hspace="30">
 
-### Trip Tennis Tournament
+Competitive local multiplayer game based on tennis in a vaporwawe atmosphere. </p>
 
-<img src="/img/screens/trip_tennis_tournament.png" width="500">
-
-Competitive local multiplayer game based on tennis in a vaporwawe atmosphere.
-
-<font color="red">- In Development -</font>
+<p align="center"><font color="red">- In Development -</font></p>
+</div>
+<hr>
