--- a/projects.html
+++ b/projects.html
@@ -37,4 +37,4 @@ Competitive local multiplayer game based on tennis in a vaporwawe atmosphere. </
 
 <p align="center"><font color="red">- In Development -</font></p>
 </div>
-<hr>
+<div class="content-section"></div>
