--- a/projects.html
+++ b/projects.html
@@ -3,10 +3,10 @@ section-type: projects
 title: Projects
 ---
 <!-- TGS -->
-<div class="game-section">
+<div class="game-section-left">
 <h3 align="center">The Greatest Show</h3>
 <p align="justify">
-<img src="/img/screens/the_greatest_show.png" width="500" align="left" hspace="30">
+<img src="/img/screens/the_greatest_show.png" hspace="30">
 
 2D puzzle game where you are a puppet able of switching between two worlds.
 You have to find all machine's gears spread in these two worlds.</p>
@@ -14,11 +14,12 @@ You have to find all machine's gears spread in these two worlds.</p>
 <a href="https://github.com/a-pucci/The_Greatest_Show"><h4 align= "center">GITHUB</h4></a>
 </div>
 <hr>
+
 <!-- NA -->
-<div class="game-section">
+<div class="game-section-right">
 <h3 align="center">Nuke Alarm</h3>
 <p align="justify">
-<img src="/img/screens/nuke_alarm.png" width="500" align="right" hspace="30">
+<img src="/img/screens/nuke_alarm.png" hspace="30">
 
 Puzzle game where you are president's secretary.
 You have to find out if recieved threats are real or fake trying to avoid a nuclear war.</p>
@@ -26,12 +27,12 @@ You have to find out if recieved threats are real or fake trying to avoid a nucl
 <a href="https://gitlab.com/a-pucci/NukeAlarm"><h4 align="center">GITLAB</h4></a>
 </div>
 <hr>
-<!-- TTT -->
 
-<div class="game-section">
+<!-- TTT -->
+<div class="game-section-left">
 <h3 align="center">Trip Tennis Tournament</h3>
 <p align="justify">
-<img src="/img/screens/trip_tennis_tournament.png" width="500" align="left" hspace="30">
+<img src="/img/screens/trip_tennis_tournament.png" hspace="30">
 
 Competitive local multiplayer game based on tennis in a vaporwawe atmosphere. </p>
 
