Changed img vertical margin

--- a/projects.html
+++ b/projects.html
@@ -5,8 +5,8 @@ title: Projects
 <!-- TGS -->
 <div class="game-section-left">
 <h3 align="center">The Greatest Show</h3>
-<p align="justify">
-<img src="/img/screens/the_greatest_show.png" hspace="30">
+<p>
+<img src="/img/screens/the_greatest_show.png">
 
 2D puzzle game where you are a puppet able of switching between two worlds.
 You have to find all machine's gears spread in these two worlds.</p>
@@ -18,8 +18,8 @@ You have to find all machine's gears spread in these two worlds.</p>
 <!-- NA -->
 <div class="game-section-right">
 <h3 align="center">Nuke Alarm</h3>
-<p align="justify">
-<img src="/img/screens/nuke_alarm.png" hspace="30">
+<p>
+<img src="/img/screens/nuke_alarm.png">
 
 Puzzle game where you are president's secretary.
 You have to find out if recieved threats are real or fake trying to avoid a nuclear war.</p>
@@ -31,8 +31,8 @@ You have to find out if recieved threats are real or fake trying to avoid a nucl
 <!-- TTT -->
 <div class="game-section-left">
 <h3 align="center">Trip Tennis Tournament</h3>
-<p align="justify">
-<img src="/img/screens/trip_tennis_tournament.png" hspace="30">
+<p>
+<img src="/img/screens/trip_tennis_tournament.png">
 
 Competitive local multiplayer game based on tennis in a vaporwawe atmosphere. </p>
 
