--- a/about.html
+++ b/about.html
@@ -14,3 +14,7 @@ After some years attending computer science courses at Siena University, i coose
 One cold day of October 2016 i stumbled in [Event Horizon School](http://eventhorizoncg.com/it/), a game dev school, so i decided to sign up the day next.
 
 Currently i'm attending the third year at [TheSign Comics & Arts Academy](https://thesign.academy/), a partner of Event Horizon School in Florence.
+
+--
+
+Download <a href="a_pucci_cv.pdf" download>Curriculum</a>
